virt/stack_webservers.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webservers
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: gls-metallb-ipaddresspool
  name: web1
  namespace: webservers
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    kubevirt.io/domain: web1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: gls-metallb-ipaddresspool
  name: web2
  namespace: webservers
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    kubevirt.io/domain: web2
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
  name: webserver
  namespace: webservers
spec:
  host: webserver.apps.ocp4.example.com
  port:
    targetPort: http
  to:
    kind: Service
    name: webserver
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: webservers
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webserver 
  type: ClusterIP
